--- a/main_exploration.ipynb
+++ b/main_exploration.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from scipy.spatial.distance import cdist"
    ]
   },
   {
@@ -1100,11 +1101,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.65738442, 0.68136143, 0.79874579, ..., 0.6095746 , 0.60431594,\n",
+       "        0.56418808],\n",
+       "       [0.46947111, 0.48648599, 0.59637549, ..., 0.52221188, 0.51788281,\n",
+       "        0.4916108 ],\n",
+       "       [0.54025798, 0.55867518, 0.67176177, ..., 0.57875635, 0.57413519,\n",
+       "        0.54439223],\n",
+       "       ...,\n",
+       "       [0.30341372, 0.31199138, 0.34568652, ..., 0.07474433, 0.07628483,\n",
+       "        0.0905308 ],\n",
+       "       [0.43820882, 0.4546345 , 0.56089583, ..., 0.47490059, 0.47074329,\n",
+       "        0.44541395],\n",
+       "       [0.52840081, 0.54682808, 0.66057044, ..., 0.57188619, 0.56726125,\n",
+       "        0.53773218]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_new_features = data.iloc[:,6:] "
+    "data_new_features = cdist(data.iloc[:,6:].to_numpy(), pure_heroin.iloc[:,1:].to_numpy(), metric='euclidean')\n",
+    "\n",
+    "data_new_features"
    ]
   },
   {
