--- a/main_exploration.ipynb
+++ b/main_exploration.ipynb
@@ -1101,36 +1101,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.65738442, 0.68136143, 0.79874579, ..., 0.6095746 , 0.60431594,\n",
-       "        0.56418808],\n",
-       "       [0.46947111, 0.48648599, 0.59637549, ..., 0.52221188, 0.51788281,\n",
-       "        0.4916108 ],\n",
-       "       [0.54025798, 0.55867518, 0.67176177, ..., 0.57875635, 0.57413519,\n",
-       "        0.54439223],\n",
-       "       ...,\n",
-       "       [0.30341372, 0.31199138, 0.34568652, ..., 0.07474433, 0.07628483,\n",
-       "        0.0905308 ],\n",
-       "       [0.43820882, 0.4546345 , 0.56089583, ..., 0.47490059, 0.47074329,\n",
-       "        0.44541395],\n",
-       "       [0.52840081, 0.54682808, 0.66057044, ..., 0.57188619, 0.56726125,\n",
-       "        0.53773218]])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           330       331       332       495       496       497       543  \\\n",
+      "0     0.657384  0.681361  0.798746  0.588207  0.592995  0.658629  0.609575   \n",
+      "1     0.469471  0.486486  0.596375  0.508808  0.512055  0.562511  0.522212   \n",
+      "2     0.540258  0.558675  0.671762  0.563485  0.567123  0.621710  0.578756   \n",
+      "3     3.530489  3.509304  3.389285  3.524596  3.519884  3.454592  3.503920   \n",
+      "4     2.776048  2.753972  2.634859  2.785985  2.781322  2.716967  2.765297   \n",
+      "...        ...       ...       ...       ...       ...       ...       ...   \n",
+      "1295  0.394317  0.373246  0.261937  0.474526  0.469989  0.416303  0.453744   \n",
+      "1296  0.742089  0.766114  0.881177  0.651696  0.656548  0.721888  0.673412   \n",
+      "1297  0.303414  0.311991  0.345687  0.077239  0.075630  0.079603  0.074744   \n",
+      "1298  0.438209  0.454635  0.560896  0.461871  0.465041  0.514115  0.474901   \n",
+      "1299  0.528401  0.546828  0.660570  0.556726  0.560351  0.614806  0.571886   \n",
+      "\n",
+      "           544       545  \n",
+      "0     0.604316  0.564188  \n",
+      "1     0.517883  0.491611  \n",
+      "2     0.574135  0.544392  \n",
+      "3     3.509229  3.548809  \n",
+      "4     2.770492  2.810056  \n",
+      "...        ...       ...  \n",
+      "1295  0.457650  0.494917  \n",
+      "1296  0.668280  0.627606  \n",
+      "1297  0.076285  0.090531  \n",
+      "1298  0.470743  0.445414  \n",
+      "1299  0.567261  0.537732  \n",
+      "\n",
+      "[1300 rows x 9 columns]\n"
+     ]
     }
    ],
    "source": [
     "data_new_features = cdist(data.iloc[:,6:].to_numpy(), pure_heroin.iloc[:,1:].to_numpy(), metric='euclidean')\n",
     "\n",
-    "data_new_features"
+    "data_new_features_df = pd.DataFrame(data_new_features, index=data.iloc[:,6:].index, columns=pure_heroin.iloc[:,1:].index)\n",
+    "print(data_new_features_df)"
    ]
   },
   {
