--- a/ridge_reg.ipynb
+++ b/ridge_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,47 +12,17 @@
     "from scipy.stats import zscore\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import KFold, GridSearchCV \n",
-    "from sklearn.linear_model import Lasso, Ridge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.pyplot as plt\n",
-    "import openml\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import TensorDataset, DataLoader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "from scipy.spatial.distance import cdist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.spatial.distance import cdist\n",
     "distances = cdist(data.iloc[:,6:].to_numpy(), pure_heroin.iloc[:, 1:].to_numpy(), metric = 'euclidean')\n",
     "dist_her = pd.DataFrame(distances, index = data.iloc[:,6:].index, columns=pure_heroin.iloc[:,1:].index)"
    ]
@@ -85,13 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "spectrum = data.iloc[:, 6:]\n",
     "spectrum_filtered = pd.DataFrame(savgol_filter(spectrum, 7, 3, deriv = 2, axis = 0))\n",
-    "spectrum_filtered_st = zscore(spectrum_filtered, axis = 1)\n",
+    "spectrum_filtered_st = zscore(spectrum_filtered, axis = 1)\"\"\"\n",
     "\n",
     "X = data_new_features2\n",
     "y = data['PURITY']\n",
