--- a/main_exploration.ipynb
+++ b/main_exploration.ipynb
@@ -1248,35 +1248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.06176667, 0.06005773, 0.06129553, ..., 0.33079367, 0.22151107,\n",
-       "        0.25268355],\n",
-       "       [0.23142285, 0.22463087, 0.23067108, ..., 1.39427913, 0.99825382,\n",
-       "        1.08929348],\n",
-       "       [0.19031694, 0.18524179, 0.18967949, ..., 1.0387145 , 0.75891315,\n",
-       "        0.8178162 ],\n",
-       "       ...,\n",
-       "       [0.34601328, 0.33156304, 0.34453654, ..., 2.92331448, 1.91348952,\n",
-       "        2.20257053],\n",
-       "       [0.25047041, 0.24275324, 0.24959867, ..., 1.57706567, 1.11124269,\n",
-       "        1.22346607],\n",
-       "       [0.19415103, 0.18891776, 0.19350885, ..., 1.07452924, 0.78535572,\n",
-       "        0.8469424 ]])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_new_features2 = data.iloc[:, 6:].values.dot(substances_pure.iloc[:,1:].values.T) #faire avec toutes les substances\n",
-    "data_new_features2"
+    "data_new_features2 = data.iloc[:, 6:].values.dot(pure_heroin.iloc[:,1:].values.T) #faire avec toutes les substances"
    ]
   },
   {
@@ -2216,7 +2192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MLCourse",
    "language": "python",
    "name": "python3"
   },
@@ -2230,7 +2206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
