--- a/nn_3.ipynb
+++ b/nn_3.ipynb
@@ -6169,7 +6169,7 @@
     "# Définir les paramètres pour GridSearch\n",
     "params = {\n",
     "    'eta': [0.005, 0.02, 0.01],\n",
-    "    'max_epochs': [200],\n",
+    "    'max_epochs': [150, 200],\n",
     "    'fc1_out_features': [32, 64, 128],\n",
     "    'fc2_out_features': [32, 64, 128],\n",
     "    'batch': [45, 50, 55]\n",
