--- a/main_exploration.ipynb
+++ b/main_exploration.ipynb
@@ -2216,7 +2216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MLCourse",
    "language": "python",
    "name": "python3"
   },
