--- a/ridge_reg.ipynb
+++ b/ridge_reg.ipynb
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "MLCourse",
    "language": "python",
    "name": "python3"
   },
